test/invalidImports/service.mock.ts
import {
    ClassB,
  IA,
} from "./service.interface";

export class ClassC extends ClassB {}
export class ClassA implements IA {}
